# newspaper-classifier

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yaml
classifier/: utils.py
classifier/management/commands/: train_classifier.py
crawler/: utils.py
crawler/management/commands/: crawl.py
newspaper_classifier/: asgi.py  settings.py  urls.py  wsgi.py
predictor/: streamlit.py
predictor/management/commands/: predict.py
