[tool.poetry]
name = "newspaper-classifier"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
django = "^4.1.7"
scikit-learn = "^1.2.1"
streamlit = "^1.18.1"
natto-py = "^1.0.1"
lime = "^0.2.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"
types-requests = "^2.28.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
